# contractor-scheduling-tracker

./: .env.example  .gitignore  CLAUDE.md  PROJECT_CHARTER.md  README.md  TASKS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: database.py  main.py  models.py  seed.py
app/routers/: contractors.py  dashboard.py  payments.py  properties.py  schedule.py
app/static/: custom.css
app/templates/: base.html  dashboard.html  payments.html  schedule.html
app/templates/contractors/: detail.html  list.html
app/templates/properties/: detail.html  list.html
docs/: user-guide.md
docs/decisions/: 001-initial-architecture.md
docs/runbooks/: local-development.md
tests/: conftest.py  test_routes.py
